kubernetes/apps/homelable/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: homelable
  annotations:
    argocd.argoproj.io/sync-wave: "-1"
