kubernetes/apps/homelable/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: homelable
  namespace: homelable
spec:
  parentRefs:
    - name: vps-gateway
      namespace: envoy-gateway-system
      sectionName: https
  hostnames:
    - "homelable.robin-vidal.com"
  rules:
    - backendRefs:
        - name: frontend
          port: 80
